syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message ConfigurePoolRequest {
    string ZoneId = 1;
    string ImageId = 2;
    // TODO: should be removed.
    // types.DiskKind Kind = 3;
    uint32 Capacity = 4;
    bool UseImageSize = 5;
}

message ConfigurePoolTaskState {
    ConfigurePoolRequest Request = 1;
}
